Updates to JDK22